fix operating day id's